add google maps panel to the side accordian

--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -4,34 +4,37 @@
   <link rel="stylesheet" type="text/css" href="ext/resources/css/ext-all.css">
   <style>
   body {
-    font-family:'lucida grande',tahoma,arial,sans-serif;
-    font-size:11px;
-}
-a {
-    color:#15428B;
-}
-a:link, a:visited {
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-#plugin-auth { vertical-align: middle; }
+      font-family: 'lucida grande',tahoma,arial,sans-serif;
+      font-size: 11px;
+  }
+  a {
+      color: #15428B;
+  }
+  a:link, a:visited {
+      text-decoration: none;
+  }
+  a:hover {
+      text-decoration: underline;
+  }
+  #plugin-auth {
+      vertical-align: middle;
+  }
   #header {
-    background: #7F99BE url(hd-bg.gif) repeat-x center;
-  }   
+      background: #7F99BE url(hd-bg.gif) repeat-x center;
+  }
   #header h1 {
-    font-size: 16px;
-    color: #fff;
-    font-weight: normal;
-    padding: 5px 10px;
-    }
-
+      font-size: 16px;
+      color: #fff;
+      font-weight: normal;
+      padding: 5px 10px;
+  }
   </style>
   <script type="text/javascript" src="ext/adapter/ext/ext-base.js"></script>
   <script type="text/javascript" src="ext/ext-all-debug.js"></script>
-  <title>Personal Container</title>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript" src="ext/Ext.ux.GMapPanel3.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <title>Personal Container</title>
 </head>
 <body>
 <div id="header"><h1>Personal Container<h1></div>
