improve rendering of log view in small space

--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -28,6 +28,24 @@
       font-weight: normal;
       padding: 5px 10px;
   }
+  .logEntryBody-info {
+      padding-left: 2px;
+      color: #111111;
+  }    
+  .logEntryBody-debug {
+      padding-left: 2px;
+      color: #111177;
+  }
+  .logEntryBody-error {
+      padding-left: 2px;
+      font-weight: bold;
+      color: #771111;
+  }
+  .logEntryDate {
+      color: #999999;
+  }
+  .logEntry {
+  }
   </style>
   <script type="text/javascript" src="ext/adapter/ext/ext-base.js"></script>
   <script type="text/javascript" src="ext/ext-all-debug.js"></script>
