--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -51,6 +51,7 @@
   <script type="text/javascript" src="ext/ext-all-debug.js"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript" src="ext/Ext.ux.GMapPanel3.js"></script>
+  <script type="text/javascript" src="ext/Ext.ux.RowExpander.js"></script>
   <script type="text/javascript" src="app.js"></script>
   <title>Personal Container</title>
 </head>
