threaded rendering improvements in the UI

--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -46,6 +46,25 @@
   }
   .logEntry {
   }
+  .messageWrapper {
+      text-align: left;
+  }
+  .messageToFrom {
+      color: #665577;
+      float: left; position: relative; padding-right: 10px;
+  }
+  .messageThreadCount {
+      font-style: italic;
+  }
+  .messageDate {
+      float: right; position: relative;
+      color: #444444;
+  }
+  .messageBody {
+      float: left; position: relative;
+      text-align: left;
+      padding: 5px; padding-left: 20px; font-size: 120%;
+  }
   </style>
   <script type="text/javascript" src="ext/adapter/ext/ext-base.js"></script>
   <script type="text/javascript" src="ext/ext-all-debug.js"></script>
