--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -77,8 +77,10 @@
 <body>
 <div id="header"><h1>Personal Container<h1></div>
 <div style="display:none">
-    <div id="plugin-auth">
-        <div><img src="/static/twitter_30x30.png" height=15 /> [ <a href="/twitter/us">mentions</a> / <a href="/twitter/ourtweets">ours</a> ]
- </div>
+    <div id="plugin_auth">
+       <img src="/static/twitter_30x30.png" height=15 />
+       <span id="plugin_twitter"></span>
+    </div>
+</div>
 </body>
 </html>
