--- a/appengine/static/pages/index.html
+++ b/appengine/static/pages/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="ext/resources/css/ext-all.css">
+  <link rel="stylesheet" type="text/css" href="/js/ext/resources/css/ext-all.css">
   <style>
   body {
       font-family: 'lucida grande',tahoma,arial,sans-serif;
@@ -20,7 +20,7 @@
       vertical-align: middle;
   }
   #header {
-      background: #7F99BE url(hd-bg.gif) repeat-x center;
+      background: #7F99BE url(/images/hd-bg.gif) repeat-x center;
   }
   #header h1 {
       font-size: 16px;
@@ -66,19 +66,19 @@
       padding: 5px; padding-left: 20px; font-size: 120%;
   }
   </style>
-  <script type="text/javascript" src="ext/adapter/ext/ext-base.js"></script>
-  <script type="text/javascript" src="ext/ext-all-debug.js"></script>
+  <script type="text/javascript" src="/js/ext/adapter/ext/ext-base.js"></script>
+  <script type="text/javascript" src="/js/ext/ext-all-debug.js"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-  <script type="text/javascript" src="ext/Ext.ux.GMapPanel3.js"></script>
-  <script type="text/javascript" src="ext/Ext.ux.RowExpander.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="/js/ext/Ext.ux.GMapPanel3.js"></script>
+  <script type="text/javascript" src="/js/ext/Ext.ux.RowExpander.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
   <title>Personal Container</title>
 </head>
 <body>
 <div id="header"><h1>Personal Container<h1></div>
 <div style="display:none">
     <div id="plugin_auth">
-       <img src="/static/twitter_30x30.png" height=15 />
+       <img src="/images/twitter_30x30.png" height=15 />
        <span id="plugin_twitter"></span>
     </div>
 </div>
