--- a/appengine/static/pages/index.html
+++ b/appengine/static/pages/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="/js/ext/resources/css/ext-all.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="/js/ext/resources/css/ext-all.css" />
   <style>
   body {
       font-family: 'lucida grande',tahoma,arial,sans-serif;
